--- a/src/csc640project/MainGUIInterface.form
+++ b/src/csc640project/MainGUIInterface.form
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
-  <NonVisualComponents>
-    <Component class="javax.swing.JButton" name="OneButton1">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="8" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="1"/>
-      </Properties>
-    </Component>
-  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -71,17 +61,24 @@
                       <Group type="102" attributes="0">
                           <Component id="CommandDisplayArea" min="-2" pref="289" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="Enter_New_Service_Button" max="32767" attributes="0"/>
+                          <Component id="OneButton1" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
-                              <Component id="TerminalScrollPane" alignment="0" min="-2" pref="289" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="248" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="TerminalScrollPane" min="-2" pref="289" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="Calculate_Weekly_Fees_Button" max="32767" attributes="0"/>
                               <Component id="Look_Up_Service_Code" alignment="0" max="32767" attributes="0"/>
+                              <Component id="Enter_New_Service_Button" max="32767" attributes="0"/>
+                              <Component id="Enter_New_Service_Button1" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -95,20 +92,24 @@
                   <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="CommandDisplayArea" pref="32" max="32767" attributes="0"/>
-                      <Component id="Enter_New_Service_Button" max="32767" attributes="0"/>
+                      <Component id="OneButton1" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="Look_Up_Service_Code" min="-2" pref="53" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="Calculate_Weekly_Fees_Button" min="-2" pref="55" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="Enter_New_Service_Button1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                          <Component id="Enter_New_Service_Button" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="Look_Up_Service_Code" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                          <Component id="Calculate_Weekly_Fees_Button" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="TerminalScrollPane" min="-2" pref="135" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="44" max="32767" attributes="0"/>
+                  <EmptySpace pref="122" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -171,6 +172,16 @@
         <Component class="javax.swing.JButton" name="Calculate_Weekly_Fees_Button">
           <Properties>
             <Property name="text" type="java.lang.String" value="Calculate Weekly Fees"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="Enter_New_Service_Button1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Check-In"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="OneButton1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Login "/>
           </Properties>
         </Component>
       </SubComponents>
