--- a/src/csc640project/MainGUIInterface.form
+++ b/src/csc640project/MainGUIInterface.form
@@ -55,25 +55,29 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="CommandDisplayArea" alignment="0" min="-2" pref="289" max="-2" attributes="0"/>
-                      <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
-                      <Component id="TerminalScrollPane" min="-2" pref="289" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="Login_Button" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="Calculate_Weekly_Fees_Button" max="32767" attributes="0"/>
-                          <Component id="Look_Up_Service_Code" alignment="0" max="32767" attributes="0"/>
-                          <Component id="Enter_New_Service_Button" max="32767" attributes="0"/>
-                          <Component id="Check_In_Button" alignment="0" max="32767" attributes="0"/>
-                          <Component id="Interactive_Record_Mode_Button" alignment="0" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="CommandDisplayArea" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
+                              <Component id="TerminalScrollPane" min="-2" pref="289" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="Login_Button" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="Calculate_Weekly_Fees_Button" max="32767" attributes="0"/>
+                                  <Component id="Look_Up_Service_Code" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="Enter_New_Service_Button" max="32767" attributes="0"/>
+                                  <Component id="Check_In_Button" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="Interactive_Record_Mode_Button" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="79" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -140,6 +144,10 @@
                   </Border>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="DataEntryAreaKeyPressed"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="DataEntryAreaKeyTyped"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
