Created a new Insert Member GUI

--- a/src/csc640project/InsertMemberGUI.form
+++ b/src/csc640project/InsertMemberGUI.form
@@ -51,7 +51,10 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="75" max="32767" attributes="0"/>
-                  <Component id="NameTextField" min="-2" pref="178" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="NameTextField" min="-2" pref="178" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -61,13 +64,23 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                   <Component id="NameTextField" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="285" max="32767" attributes="0"/>
+                  <EmptySpace pref="243" max="32767" attributes="0"/>
+                  <Component id="EnterButton" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="NameTextField">
+        </Component>
+        <Component class="javax.swing.JButton" name="EnterButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Enter"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EnterButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
