--- a/src/csc640project/InteractiveRecordMode.form
+++ b/src/csc640project/InteractiveRecordMode.form
@@ -54,9 +54,9 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="UpdateMemberButton1" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="DeleteMemberButton" min="-2" pref="103" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="UpdateMemberButton2" min="-2" pref="107" max="-2" attributes="0"/>
+                          <Component id="DeleteProviderButton" min="-2" pref="107" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="InsertMemberButton" min="-2" max="-2" attributes="0"/>
@@ -88,8 +88,8 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="UpdateMemberButton1" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
-                      <Component id="UpdateMemberButton2" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="DeleteMemberButton" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="DeleteProviderButton" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="23" max="32767" attributes="0"/>
               </Group>
@@ -129,7 +129,7 @@
             <Property name="text" type="java.lang.String" value="Update Provider"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="UpdateMemberButton1">
+        <Component class="javax.swing.JButton" name="DeleteMemberButton">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="10" style="0"/>
@@ -137,16 +137,19 @@
             <Property name="text" type="java.lang.String" value="Delete Member"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UpdateMemberButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DeleteMemberButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="UpdateMemberButton2">
+        <Component class="javax.swing.JButton" name="DeleteProviderButton">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="10" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Delete Provider"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DeleteProviderButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
