--- a/src/csc640project/InteractiveRecordMode.form
+++ b/src/csc640project/InteractiveRecordMode.form
@@ -120,6 +120,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Update Member"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UpdateMemberButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="UpdateProviderButton">
           <Properties>
