--- a/src/csc640project/InteractiveRecordMode.form
+++ b/src/csc640project/InteractiveRecordMode.form
@@ -131,6 +131,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Update Provider"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UpdateProviderButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="DeleteMemberButton">
           <Properties>
