--- a/src/csc640project/InsertMemberGUI.form
+++ b/src/csc640project/InsertMemberGUI.form
@@ -59,7 +59,7 @@
                       <Component id="StreetLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="ZipCodeLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="StateLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="CountryLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -92,7 +92,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="StateLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          <Component id="CountryLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
@@ -194,7 +194,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="ZipCodeField">
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="CountryLabel">
           <Properties>
             <Property name="text" type="java.lang.String" value="Country"/>
           </Properties>
